--- a/css2-snbp.css
+++ b/css2-snbp.css
@@ -9,3 +9,8 @@
             .abc{
                 color: #ffffff;
             }
+            @media screen and(min-width: 1024px){
+            #latch-screen{
+                width: 40%
+            }
+            }
