--- a/css2-snbp.css
+++ b/css2-snbp.css
@@ -14,3 +14,11 @@
                 width: 40%
             }
             }
+            * {
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            }
+            
+            ::-webkit-scrollbar {
+            display: none;
+            }
