--- a/css2-snbp.css
+++ b/css2-snbp.css
@@ -14,6 +14,11 @@
                 width: 40%
             }
             }
+            #toggleRedBlue{
+            background-color: #006bbd;
+            color: white;
+            width:125px
+            }
             * {
             scrollbar-width: none;
             -ms-overflow-style: none;
