--- a/panduan-umum-pkm/style.css
+++ b/panduan-umum-pkm/style.css
@@ -1,4 +1,4 @@
-background-color: #010020;
+body { background-color: #010020;
         color: #e0e0e0;
         font-family: Arial, sans-serif;
         margin: 0;
