--- a/src/content/snbp.css
+++ b/src/content/snbp.css
@@ -12,7 +12,7 @@ body{
     height:100%;
     margin:0;
     padding:0;
-    background-image:url("/img/background.jpg");
+    background-image:url("./background.jpg");
     background-color:#0e0e0e;
     background-size:cover;
     background-position:center center;
